--- a/index.html
+++ b/index.html
@@ -12,30 +12,25 @@
 </head>
 <body>
     <main>
-        <section class="phone">
-            <iframe src="paginas/home.html" name="frame" id="tela" frameborder="0" scolling="yes">
-                Desculpe, seu navegador não é compativel com isto
-            </iframe>
-        </section> 
-        <section class="sociais">
-            <nav>
-
-                <a href="paginas/power.html" target="frame"><img  src="imagens/power_botão.png" alt="power-botão"></a>
-                
-                <a href="paginas/home.html" target="frame"><img src="imagens/logo-home.jpg" alt="imagem home"></a>
-
-                <a href="paginas/insta.html" target="frame"><img src="imagens/logo-instagram.jpg" alt="instagram"></a>
-
-                <a href="paginas/face.html" target="frame"><img  src="imagens/logo-facebook.jpg" alt="facebook"></a>
-
-                <a href="paginas/git.html" target="frame"><img  src="imagens/logo-github.jpg" alt="logo-github"></a>
-
-                <a href="paginas/twit.html" target="frame"><img  src="imagens/logo-twitter.jpg" alt="logo-twitter"></a>
-
-                <a href="paginas/yout.html" target="frame"><img  src="imagens/logo-youtube.jpg" alt="logo-youtube"></a>
-
-            </nav> 
-        </section>
+        <div>
+            <section class="phone">
+                <iframe src="paginas/home.html" name="frame" id="tela" frameborder="0" scolling="yes">
+                    Desculpe, seu navegador não é compativel com isto
+                </iframe>
+            </section>
+            <section class="sociais">
+                <nav>
+                    <a href="paginas/power.html" target="frame"><img  src="imagens/power_botão.png" alt="power-botão"></a>
+            
+                    <a href="paginas/home.html" target="frame"><img src="imagens/logo-home.jpg" alt="imagem home"></a>
+                    <a href="paginas/insta.html" target="frame"><img src="imagens/logo-instagram.jpg" alt="instagram"></a>
+                    <a href="paginas/face.html" target="frame"><img  src="imagens/logo-facebook.jpg" alt="facebook"></a>
+                    <a href="paginas/git.html" target="frame"><img  src="imagens/logo-github.jpg" alt="logo-github"></a>
+                    <a href="paginas/twit.html" target="frame"><img  src="imagens/logo-twitter.jpg" alt="logo-twitter"></a>
+                    <a href="paginas/yout.html" target="frame"><img  src="imagens/logo-youtube.jpg" alt="logo-youtube"></a>
+                </nav>
+            </section>
+        </div>
     </main>
 </body>
 </html>
